Minor UI issues fixed and froala editor popup aligned

--- a/BrndBot/web/css/dashboard.css
+++ b/BrndBot/web/css/dashboard.css
@@ -151,7 +151,7 @@ ul.text1 li a p{
    text-align:center;
    line-height:10px;   
    opacity:1;
-   left:-0.7em;
+   left:-1em;
 }
 /*#text2{
     font-size:small;
