--- a/BrndBot/web/css/emailautomationeditor.css
+++ b/BrndBot/web/css/emailautomationeditor.css
@@ -15,9 +15,11 @@ and open the template in the editor.
                  margin-left:-15px !important;
              }
              .bgcolor{
-                 width:746px;
-                 height:640px;
-                 background-color: #f6f4f5;
+                    width: 746px;
+                    min-height: 100%;
+                    height: 100% !important;
+                    position: fixed;
+                    background-color: #f6f4f5;
              }
              .emleditorhead{
                  margin-left:51px;             
@@ -47,10 +49,12 @@ and open the template in the editor.
                  height:519px;                 
              }
              .btmdiv{
-                 background-color: #e2e3e7;
-                 width:746px;
-                 height:38px;
-                 margin-left:-16px;
+                background-color: #e2e3e7;
+                width: 746px;
+                height: 38px;
+                margin-left: -16px;
+                position: fixed;
+                bottom: 0%;
              }
              .editemail{
                  margin-left:20px; 
